// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTemplates returns defaults if part is not implemented 1`] = `
Array [
  Object {
    "description": undefined,
    "icon": [Function],
    "id": "author",
    "parameters": undefined,
    "schemaType": "author",
    "title": "Author",
    "value": [Function],
  },
  Object {
    "description": undefined,
    "icon": [Function],
    "id": "person",
    "parameters": undefined,
    "schemaType": "person",
    "title": "Person",
    "value": Object {
      "_type": "person",
    },
  },
  Object {
    "description": undefined,
    "icon": [Function],
    "id": "post",
    "parameters": undefined,
    "schemaType": "post",
    "title": "Post",
    "value": Object {
      "_type": "post",
    },
  },
  Object {
    "description": undefined,
    "icon": undefined,
    "id": "developer",
    "parameters": undefined,
    "schemaType": "developer",
    "title": "Developer",
    "value": [Function],
  },
]
`;

exports[`getTemplates returns defined templates if part implemented 1`] = `
Array [
  Object {
    "id": "author",
    "schemaType": "author",
    "title": "Author",
    "value": Object {
      "title": "here",
    },
  },
  Object {
    "id": "developer",
    "schemaType": "developer",
    "title": "Developer",
    "value": Object {
      "title": "Foo",
    },
  },
]
`;
